Added highlighting for language files

--- a/src/data/sh.lang
+++ b/src/data/sh.lang
@@ -37,6 +37,7 @@ format = 1
 	end = '`'
 	style = "misc"
 }
+#FIXME: this is quite broken, because there may be strings and other things inside
 %pattern {
 	start = '\$\('
 	end = '\)'
