--- a/src/data/def/c.lang
+++ b/src/data/def/c.lang
@@ -3,16 +3,16 @@
 %define {
 	name = "c-keywords"
 	%pattern {
-		regex = "\b(?:auto|break|case|char|const|continue|default|do|double|else|' +
+		regex = '\b(?:auto|break|case|char|const|continue|default|do|double|else|' +
 			'enum|extern|float|for|goto|if|inline|int|long|register|restrict|' +
 			'return|short|signed|sizeof|static|struct|switch|typedef|union|' +
-			'unsigned|void|volatile|while|_Bool|_Complex|_Imaginary'
+			'unsigned|void|volatile|while|_Bool|_Complex|_Imaginary)'
 		style = "keyword"
 	}
 }
 
 %define {
 	name = "c"
-	%pattern { use = "c++-keywords" }
+	%pattern { use = "c-keywords" }
 	%pattern { use = "c-base" }
 }
