--- a/src/data/lang.lang
+++ b/src/data/lang.lang
@@ -1,10 +1,8 @@
 format = 1
 
-%pattern {
-	start = '#'
-	end = '$'
-	style = "comment"
-}
+%include = "def/generic.lang"
+%pattern { use = "hash-comment" }
+
 %pattern {
 	regex = '(?<!\w)(?:%include|%pattern|%define|start|end|regex|use|style|' +
 		'delim-style|nested|true|false|yes|no|format)'
@@ -15,7 +13,7 @@ format = 1
 	%pattern {
 		regex = '""'
 	}
-	end = '"|(?<!\\)$'
+	end = '"|$'
 	style = "string"
 }
 %pattern {
@@ -23,6 +21,6 @@ format = 1
 	%pattern {
 		regex = "''"
 	}
-	end = "'|(?<!\\)$"
+	end = "'|$"
 	style = "string"
 }
