Added string and character constant prefixes for C and C++; use unicode strings only for C++

--- a/src/data/def/c-base.lang
+++ b/src/data/def/c-base.lang
@@ -75,15 +75,14 @@
 	%pattern { use = "c++-comment" }
 
 	%pattern {
-		start = '"'
-		%pattern { use = "unicode-string-escape" }
+		start = '(?:\bL)?"'
 		%pattern { use = "string-escape" }
 		end = '"|(?:\G|[^\\])\K$'
 		style = "string"
 	}
 
 	%pattern {
-		start = "'"
+		start = "(?:\bL)?'"
 		%pattern { use = "string-escape" }
 		end = "'|(?:\G|[^\\])\K$"
 		style = "string"
