--- a/src/data/def/c.lang
+++ b/src/data/def/c.lang
@@ -6,7 +6,7 @@
 		regex = '\b(?:auto|break|case|char|const|continue|default|do|double|else|' +
 			'enum|extern|float|for|goto|if|inline|int|long|register|restrict|' +
 			'return|short|signed|sizeof|static|struct|switch|typedef|union|' +
-			'unsigned|void|volatile|while|_Bool|_Complex|_Imaginary)'
+			'unsigned|void|volatile|while|_Bool|_Complex|_Imaginary)\b'
 		style = "keyword"
 	}
 }
