--- a/src/data/shadow.lang
+++ b/src/data/shadow.lang
@@ -20,7 +20,7 @@ format = 1
 		regex = '(?<=:)[^:\s]+'
 		style = "string"
 	}
-	%pattern { use = "non-matching }
+	%pattern { use = "non-matching" }
 	%pattern {
 		start = ':'
 		%pattern {
@@ -28,7 +28,7 @@ format = 1
 			regex = '(?<=:)\d+'
 			style = "number"
 		}
-		%pattern { use = "non-matching }
+		%pattern { use = "non-matching" }
 		%pattern {
 			start = ':'
 			%pattern {
@@ -36,7 +36,7 @@ format = 1
 				regex = '(?<=:)\d+'
 				style = "misc"
 			}
-			%pattern { use = "non-matching }
+			%pattern { use = "non-matching" }
 			%pattern {
 				start = ':'
 				%pattern {
@@ -44,7 +44,7 @@ format = 1
 					regex = '(?<=:)\d+'
 					style = "misc"
 				}
-				%pattern { use = "non-matching }
+				%pattern { use = "non-matching" }
 				%pattern {
 					start = ':'
 					%pattern {
@@ -52,7 +52,7 @@ format = 1
 						regex = '(?<=:)\d+'
 						style = "comment"
 					}
-					%pattern { use = "non-matching }
+					%pattern { use = "non-matching" }
 					%pattern {
 						start = ':'
 						%pattern {
@@ -60,7 +60,7 @@ format = 1
 							regex = '(?<=:)\d+'
 							style = "comment"
 						}
-						%pattern { use = "non-matching }
+						%pattern { use = "non-matching" }
 						%pattern {
 							start = ':'
 							%pattern {
@@ -68,7 +68,7 @@ format = 1
 								regex = '(?<=:)\d+'
 								style = "variable"
 							}
-							%pattern { use = "non-matching }
+							%pattern { use = "non-matching" }
 							%pattern {
 								start = ':'
 								# Reserved
