Add option to ask for the loaded file's name, for comparison purposes

--- a/src/data/def/c-base.lang
+++ b/src/data/def/c-base.lang
@@ -43,6 +43,7 @@
 		regex = '[@\\]\w*'
 		style = "error"
 	}
+	#FIXME: also include HTML commands accepted by doxygen
 	#FIXME: also include C# xml type commands that are also accepted by doxygen
 }
 
