--- a/src/data/lang.lang
+++ b/src/data/lang.lang
@@ -5,7 +5,7 @@ format = 1
 
 %pattern {
 	regex = '(?<!\w)(?:%include|%pattern|%define|start|end|regex|use|style|' +
-		'delim-style|nested|true|false|yes|no|format)'
+		'delim-style|nested|true|false|yes|no|format|name)'
 	style = "keyword"
 }
 %pattern {
