--- a/src/data/sh.lang
+++ b/src/data/sh.lang
@@ -1,127 +1,6 @@
 format = 1
 
-%define {
-	sh-string {
-		%pattern {
-			start = "'"
-			end = "'"
-			style = "string"
-		}
-		%pattern {
-			start = '"'
-			%pattern { regex = '\\[$`"\\]' }
-			%pattern { use = "sh-variable" }
-			%pattern { use = "sh-arithmetic" }
-			%pattern { use = "sh-eval" }
-			%pattern { use = "sh-simple-eval" }
-			end = '"'
-			style = "string"
-		}
-	}
-	sh-comment {
-		%pattern {
-			start = '#'
-			end = '$'
-			style = "comment"
-		}
-	}
-
-
-	sh-variable {
-		%pattern {
-			regex = '\$(?:[-@*#?$!0-9]|[_a-zA-Z][_a-zA-Z]*)'
-			style = "variable"
-		}
-		%pattern {
-			start = '\$\{'
-			%pattern { regex = '\\.' }
-			%pattern { use = "sh-string" }
-			%pattern { use = "sh-arithmetic" }
-			%pattern { use = "sh-eval" }
-			%pattern { use = "sh-simple-eval" }
-			end = '\}'
-			style = "variable"
-			nested = yes
-		}
-	}
-
-	sh-eval {
-		%pattern {
-			start = '\$\('
-			%pattern { use = "sh-shell" }
-			%pattern {
-				start = '\('
-				%pattern { use = "sh-shell" }
-				end = '\)'
-				nested = yes
-			}
-			end = '\)'
-			style = "misc"
-			# Don't need nested here, because we already include eval through
-			# use = "sh-shell"
-		}
-	}
-
-	sh-arithmetic {
-		%pattern {
-			start = '\$\(\('
-			%pattern { regex = '\\.' }
-			%pattern { use = "sh-variable" }
-			%pattern { use = "sh-eval" }
-			end = '\)\)'
-		}
-	}
-	sh-simple-eval {
-		%pattern {
-			start = '`'
-			%pattern { regex = '\\[\\`$]' }
-			end = '`'
-			style = "misc"
-		}
-	}
-
-	sh-keyword {
-		%pattern {
-			regex = '(?<![-\w])(?:if|then|else|elif|fi|done|do|case|esac|while|until|for|in|' +
-				'break|continue|eval|exec|exit|export|readonly|return|set|shift|' +
-				'times|trap|unset|source|alias|bg|bind|break|builtin|caller|cd|' +
-				'command|compgen|complete|compopt|declare|typeset|dirs|disown|echo|' +
-				'enable|fc|fg|getopts|hash|help|history|jobs|kill|let|local|logout|' +
-				'mapfile|readarray|popd|printf|pushd|pwd|read|shopt|suspend|test|' +
-				'type|ulimit|umask|unalias|wait)\b'
-			style = "keyword"
-		}
-	}
-
-	sh-shell {
-		%pattern { regex = '\\.' }
-		%pattern { use = "sh-string" }
-		%pattern { use = "sh-comment" }
-		%pattern { use = "sh-variable" }
-		%pattern { use = "sh-arithmetic" }
-		%pattern { use = "sh-eval" }
-		%pattern { use = "sh-simple-eval" }
-		%pattern { use = "sh-keyword" }
-
-		# Here we run into a limitation of libt3highlight: in principle any word (quoted
-		# and all) may be supplied after the << operator. However, we have to have a
-		# fixed end pattern, which can not refer to the start pattern. So we cant'
-		# have a variable start condition, because we can't end it anymore. Thus,
-		# instead we choose a particular (and obvious) start word, and use that.
-		# Far from perfect, but it will do the job in most cases. To make it slightly
-		# more useful, we use case-insensitive matching, which may in some cases
-		# actually screw up.
-		%pattern {
-			start = '(?i)<<-?EOF'
-			%pattern { use = "sh-variable" }
-			%pattern { use = "sh-arithmetic" }
-			%pattern { use = "sh-eval" }
-			%pattern { use = "sh-simple-eval" }
-			end = '^(?i)EOF'
-			style = "string"
-		}
-	}
-}
+%include = "def/sh.lang"
 
 %pattern {
 	use = "sh-shell"
